@@ -1,3 +1,7 @@
+SimpleComplex/Utils 1.x, 2017-09-24
+-----------------------------------
+- Bootstrap class.
+
 SimpleComplex/Utils 1.x, 2017-09-22
 -----------------------------------
 - Utils::arrayMergeRecursive() to combine the best of native
